fixed CSS spacing, cleaned up components

--- a/assets/css/v2/on_bus/departures_row.scss
+++ b/assets/css/v2/on_bus/departures_row.scss
@@ -19,6 +19,7 @@
 
 .departure-row__route {
   display: inline-block;
+  width: 112px;
 }
 
 .departure-destination {
@@ -53,45 +54,6 @@
   display: inline-block;
   vertical-align: top;
   height: 100%;
-  width: 121px;
+  width: 130px;
   vertical-align: top;
-  margin-right: 24px;
-}
-
-.departure-time {
-  font-feature-settings:
-    "liga" off,
-    "clig" off;
-  font-family: Inter;
-  font-size: 47px;
-  font-style: normal;
-  width: 100%;
-  display: inline-block;
-  align-items: center;
-  justify-content: end;
-  vertical-align: middle;
-  margin-top: 25.5px;
-}
-
-.departure-time__minutes {
-  display: inline-block;
-  text-align: right;
-  width: 69px;
-  height: 100%;
-  font-weight: 800;
-}
-
-.departure-time__minutes-label {
-  width: 42px;
-  display: inline-block;
-  height: 100%;
-  text-align: left;
-  font-weight: 400;
-}
-
-.departure-time__text {
-  display: inline-block;
-  width: 100%;
-  font-weight: 800;
-  text-align: right;
 }
